// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compileDeleteWithLimit > basic delete with limit > generates CTE + DELETE with correct structure 1`] = `
{
  "params": [
    "pending",
    10,
  ],
  "text": "WITH "to_delete" AS (SELECT "id" FROM "app"."orders" AS "t0" WHERE "t0"."status" = $1 LIMIT $2) DELETE FROM "app"."orders" WHERE "id" IN (SELECT "id" FROM "to_delete")",
}
`;

exports[`compileDeleteWithLimit > composite primary key > generates ROW() condition for composite PK 1`] = `
{
  "params": [
    5,
  ],
  "text": "WITH "to_delete" AS (SELECT "order_id", "item_id" FROM "app"."order_items" AS "t0" LIMIT $1) DELETE FROM "app"."order_items" WHERE ROW("order_id", "item_id") IN (SELECT "order_id", "item_id" FROM "to_delete")",
}
`;

exports[`compileDeleteWithLimit > custom column name on primary key > uses resolved column name (ticket_id) not field key (ticketId) 1`] = `
{
  "params": [
    5,
  ],
  "text": "WITH "to_delete" AS (SELECT "ticket_id" FROM "app"."tickets" AS "t0" LIMIT $1) DELETE FROM "app"."tickets" WHERE "ticket_id" IN (SELECT "ticket_id" FROM "to_delete")",
}
`;

exports[`compileDeleteWithLimit > namespace / schema qualification > explicit namespace override used when metadata.namespace is null 1`] = `
{
  "params": [
    10,
  ],
  "text": "WITH "to_delete" AS (SELECT "id" FROM "public"."orders" AS "t0" LIMIT $1) DELETE FROM "public"."orders" WHERE "id" IN (SELECT "id" FROM "to_delete")",
}
`;

exports[`compileDeleteWithLimit > namespace / schema qualification > unqualified table name when metadata.namespace is null and no override 1`] = `
{
  "params": [
    10,
  ],
  "text": "WITH "to_delete" AS (SELECT "id" FROM "orders" AS "t0" LIMIT $1) DELETE FROM "orders" WHERE "id" IN (SELECT "id" FROM "to_delete")",
}
`;

exports[`compileDeleteWithLimit > null criteria value > generates IS NULL condition for null field value 1`] = `
{
  "params": [
    10,
  ],
  "text": "WITH "to_delete" AS (SELECT "id" FROM "app"."orders" AS "t0" WHERE "t0"."status" IS NULL LIMIT $1) DELETE FROM "app"."orders" WHERE "id" IN (SELECT "id" FROM "to_delete")",
}
`;

exports[`compileDeleteWithLimit > param index ordering > criteria params come first; limit param is last 1`] = `
{
  "params": [
    "active",
    100,
    25,
  ],
  "text": "WITH "to_delete" AS (SELECT "id" FROM "app"."orders" AS "t0" WHERE ("t0"."status" = $1 AND "t0"."amount" = $2) LIMIT $3) DELETE FROM "app"."orders" WHERE "id" IN (SELECT "id" FROM "to_delete")",
}
`;

exports[`compileDeleteWithLimit > soft-delete and versioned combined > CTE SELECT includes both deleted_at IS NULL and version_end_date IS NULL filters 1`] = `
{
  "params": [
    10,
  ],
  "text": "WITH "to_delete" AS (SELECT "id" FROM "app"."records" AS "t0" WHERE "t0"."version_end_date" IS NULL AND "t0"."deleted_at" IS NULL LIMIT $1) DELETE FROM "app"."records" WHERE "id" IN (SELECT "id" FROM "to_delete")",
}
`;

exports[`compileDeleteWithLimit > soft-delete entity > CTE SELECT includes deleted_at IS NULL filter 1`] = `
{
  "params": [
    10,
  ],
  "text": "WITH "to_delete" AS (SELECT "id" FROM "app"."invoices" AS "t0" WHERE "t0"."deleted_at" IS NULL LIMIT $1) DELETE FROM "app"."invoices" WHERE "id" IN (SELECT "id" FROM "to_delete")",
}
`;

exports[`compileDeleteWithLimit > versioned entity > CTE SELECT includes version_end_date IS NULL filter 1`] = `
{
  "params": [
    10,
  ],
  "text": "WITH "to_delete" AS (SELECT "id" FROM "app"."prices" AS "t0" WHERE "t0"."version_end_date" IS NULL LIMIT $1) DELETE FROM "app"."prices" WHERE "id" IN (SELECT "id" FROM "to_delete")",
}
`;
